# xbrain

./: .gitignore  .secrets.baseline  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  config.toml.example  courses.yaml.example  guardrails.yaml  pyproject.toml
.claude/skills/enriching-x-knowledge/: SKILL.md
.claude/workflows/: resynth-topic-overviews.js
.github/workflows/: gate-audit.yml  gate-integrity.yml  quality.yml
docs/: digest-video.md  troubleshooting.md  tutorial.md
rubrics/: rubric-vocab.md
scripts/: announce_red_branch.sh  audit_gate_issue.sh  check.sh  import_chrome_session.py  import_safari_session.py  xbrain-transcribe  xbrain-vision
src/xbrain/: archive.py  cli.py  config.py  dashboard.py  describe.py  diff.py  digest.py  enrich.py  entity_grounding.py  evidence.py  fetch.py  fetch_x.py  gate_audit.py  generate.py  guardrails.yaml  i18n.py  llm_json.py  media.py  models.py  notes_io.py  payloads.py  refresh.py  rubrics.py  snapshot.py  store.py  topic_synth.py  topics.py  transcribe.py  validate.py  verification.py  verification_audit.py  video_digest.py  video_fetch.py  video_frames.py  video_media.py  video_select.py  vision.py  vocab.py  worksheet.py
src/xbrain/executors/: api.py  base.py
src/xbrain/extract/: article.py  browser.py  extractor.py  graphql.py  threads.py  video.py
src/xbrain/resources/: dashboard.template.html
src/xbrain/rubrics/: rubric-describe-image.md  rubric-summary.md  rubric-topic-page.md  rubric-topics.md  rubric-verify-audit.md  rubric-verify.md  rubric-video-digest.md  rubric-vocab.md
src/xkb/: archive.py  cli.py  enrich.py  fetch.py  generate.py  store.py
src/xkb/extract/: browser.py  extractor.py  graphql.py  threads.py
tests/: conftest.py  test_archive.py  test_article.py  test_article_real.py  test_browser.py  test_checker_evidence_binding.py  test_ci_workflow.py  test_cli.py  test_config.py  test_contract_fingerprint.py  test_dashboard.py  test_describe.py  test_describe_worksheet.py  test_diff.py  test_digest.py  test_enrich.py  test_entity_grounding.py  test_evidence.py  test_evidence_contract.py  test_executors_api.py  test_executors_base.py  test_extractor.py  test_fetch.py  test_fetch_x.py  test_gate_audit.py  test_gate_audit_workflow.py  test_generate.py  test_graphql.py  test_guardrail_contract.py  test_i18n.py  test_llm_json.py  test_media.py  test_models.py  test_notes_io.py  test_payloads.py  test_probe_red.py  test_quality_gate_integrity.py  test_quality_gate_scope.py  test_refresh.py  test_rubrics.py  (+25 more)
tests/fixtures/: art-Headcount_AI.json  art-OpenWiki.json  art-Wiki_Memory.json
tests/type_probes/: __init__.py  illegal_states.py
