[project]
name = "xbrain"
version = "0.1.0"
description = "XBrain — extract X bookmarks and tweets into an Obsidian wiki"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "playwright>=1.44",
    "trafilatura>=1.9",
    "anthropic>=0.39",
    "pyyaml>=6.0",
]

[project.scripts]
xbrain = "xbrain.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xbrain"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
