[project]
name = "xbrain"
version = "0.1.0"
description = "XBrain — extract X bookmarks and tweets into an Obsidian wiki"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "playwright>=1.44",
    "trafilatura>=1.9",
    "anthropic>=0.39",
    "pyyaml>=6.0",
]

[project.scripts]
xbrain = "xbrain.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "poethepoet>=0.27",
    "radon>=6.0",
    "mypy>=1.10",
    "bandit>=1.7",
    "vulture>=2.11",
    "interrogate>=1.7",
    "detect-secrets>=1.5",
    "deptry>=0.16",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xbrain"]

[tool.pytest.ini_options]
# "." puts the repo root on sys.path so shared test helpers import as
# `tests.conftest`; "src" exposes the package under test.
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
files = ["src/xbrain"]

[tool.interrogate]
ignore-init-method = true
ignore-magic = true
ignore-private = true
fail-under = 60
exclude = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.coverage.run]
source = ["src/xbrain"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 78

[tool.poe.tasks]
lint       = "ruff check src tests"
format     = "ruff format --check src tests"
types      = "mypy src/xbrain"
complexity = "radon cc src/xbrain -s"
security   = "bandit -r src/xbrain -ll -q"
deadcode   = "vulture src/xbrain --min-confidence 80"
docs       = "interrogate src/xbrain"
secrets    = "detect-secrets scan src/xbrain tests scripts"
deps       = "deptry ."
test       = "pytest -q"
check      = "bash scripts/check.sh"
