[project]
name = "xbrain"
version = "0.1.0"
description = "XBrain — extract X bookmarks and tweets into an Obsidian wiki"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "playwright>=1.44",
    "trafilatura>=1.9",
    "anthropic>=0.39",
    "pyyaml>=6.0",
    "pillow>=12.2.0",
    "requests>=2.34.2",
]

[project.scripts]
xbrain = "xbrain.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "poethepoet>=0.27",
    "radon>=6.0",
    "mypy>=1.10",
    "bandit>=1.7",
    "vulture>=2.11",
    "interrogate>=1.7",
    "detect-secrets>=1.5",
    "deptry>=0.16",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xbrain"]

[tool.pytest.ini_options]
# "." puts the repo root on sys.path so shared test helpers import as
# `tests.conftest`; "src" exposes the package under test.
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
files = ["src/xbrain"]
# Pydantic mypy plugin turns model __init__ into a typed signature so
# mypy can flag missing required fields (e.g. ContentSourceSuccess
# without `text`). The #20 refactor relies on this to make illegal
# states unrepresentable at the type level — verified by the
# tests/type_probes/illegal_states.py probe.
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.interrogate]
ignore-init-method = true
ignore-magic = true
ignore-private = true
fail-under = 60
exclude = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.deptry]
# `xbrain` is the local package importing its own submodules — not a
# transitive third-party dependency. Marking it first-party silences the
# 43 DEP003 false positives.
known_first_party = ["xbrain"]

[tool.deptry.per_rule_ignores]
# DEP002: the dev/CLI quality tools are invoked as commands by scripts/check.sh
# and the poe tasks — they are never `import`ed, so deptry cannot see their use.
DEP002 = [
    "poethepoet",
    "radon",
    "mypy",
    "bandit",
    "vulture",
    "interrogate",
    "detect-secrets",
    "deptry",
    "pytest",
    "pytest-cov",
    "ruff",
]
# DEP001 + DEP003: scripts/import_chrome_session.py + import_safari_session.py
# import browser-cookie3 behind a guarded `try/except ImportError` — it is a
# deliberately optional helper dependency, installed on demand, not a declared
# runtime requirement. Deptry sees it as both undeclared (DEP001) and, once
# pulled in via another package's extras on some machines, as transitive
# (DEP003). Both are intentional for this opt-in helper.
DEP001 = ["browser_cookie3"]
DEP003 = ["browser_cookie3"]

[tool.coverage.run]
source = ["src/xbrain"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 78

[tool.poe.tasks]
lint       = "ruff check src tests"
format     = "ruff format --check src tests"
types      = "mypy src/xbrain"
complexity = "radon cc src/xbrain -s"
security   = "bandit -r src/xbrain -ll -q"
deadcode   = "vulture src/xbrain --min-confidence 80"
docs       = "interrogate src/xbrain"
# No standalone `secrets` task: a bare `detect-secrets scan` always exits 0
# regardless of new secrets, giving a false green. The real secrets gate is
# the baseline diff inside `poe check` (scripts/check.sh).
deps       = "deptry ."
test       = "pytest -q"
check      = "bash scripts/check.sh"

[dependency-groups]
dev = [
    "requests-mock>=1.12.1",
]
